infrastructure/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garlaws
  labels:
    name: garlaws
    app: garlaws-platform
